// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Select /> > renders as expected based on provided props 1`] = `
<div>
  <select
    class="w-full appearance-none pr-9 bg-(image:--chevron-down) bg-no-repeat focus-ring rounded-md border border-lm-input-border dark:border-dm-input-border pl-3 py-1.5 bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input"
    style="background: right 0.75rem center / 16px 12px;"
  >
    <option>
      Foo
    </option>
    <option>
      Bar
    </option>
  </select>
</div>
`;

exports[`<Select /> > renders as expected based on provided props 2`] = `
<div>
  <select
    class="w-full appearance-none pr-9 bg-(image:--chevron-down) bg-no-repeat focus-ring rounded-md border border-lm-input-border dark:border-dm-input-border pl-2 py-1 text-sm bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input"
    style="background: right 0.75rem center / 16px 12px;"
  >
    <option>
      Foo
    </option>
    <option>
      Bar
    </option>
  </select>
</div>
`;

exports[`<Select /> > renders as expected based on provided props 3`] = `
<div>
  <select
    class="w-full appearance-none pr-9 bg-(image:--chevron-down) bg-no-repeat focus-ring rounded-md border border-lm-input-border dark:border-dm-input-border pl-3 py-1.5 bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input"
    style="background: right 0.75rem center / 16px 12px;"
  >
    <option>
      Foo
    </option>
    <option>
      Bar
    </option>
  </select>
</div>
`;

exports[`<Select /> > renders as expected based on provided props 4`] = `
<div>
  <select
    class="w-full appearance-none pr-9 bg-(image:--chevron-down) bg-no-repeat focus-ring rounded-md border border-lm-input-border dark:border-dm-input-border pl-4 py-2 text-xl bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input"
    style="background: right 0.75rem center / 16px 12px;"
  >
    <option>
      Foo
    </option>
    <option>
      Bar
    </option>
  </select>
</div>
`;

exports[`<Select /> > renders as expected based on provided props 5`] = `
<div>
  <select
    class="w-full appearance-none pr-9 bg-(image:--chevron-down) bg-no-repeat focus-ring-danger rounded-md border border-danger pl-3 py-1.5 bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input"
    style="background: right 0.75rem center / 16px 12px;"
  >
    <option>
      Foo
    </option>
    <option>
      Bar
    </option>
  </select>
</div>
`;

exports[`<Select /> > renders as expected based on provided props 6`] = `
<div>
  <select
    class="w-full appearance-none pr-9 bg-(image:--chevron-down) bg-no-repeat focus-ring rounded-md border border-lm-input-border dark:border-dm-input-border pl-3 py-1.5 bg-lm-disabled-input dark:bg-dm-disabled-input"
    disabled=""
    style="background: right 0.75rem center / 16px 12px;"
  >
    <option>
      Foo
    </option>
    <option>
      Bar
    </option>
  </select>
</div>
`;
